--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body{
     justify-content: center;
     align-intems:center;
     height: 700px;
+    margin:0;
+}
+button{
+    background-color:#64A712;
+    color:white;
+    font-family:"Bai Janjuree", sans-serif;
+}
     
 
 
